
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int data; } ;
typedef TYPE_1__* PQExpBuffer ;
typedef int PGresult ;
typedef int PGconn ;


 int OPF ;
 int PQclear (int *) ;
 int PQfnumber (int *,char*) ;
 char* PQgetvalue (int *,int,int) ;
 int PQntuples (int *) ;
 TYPE_1__* createPQExpBuffer () ;
 int destroyPQExpBuffer (TYPE_1__*) ;
 int * executeQuery (int *,int ) ;
 int fmtId (char const*) ;
 int fprintf (int ,char*,...) ;
 scalar_t__ if_exists ;
 int printfPQExpBuffer (TYPE_1__*,char*,...) ;
 int role_catalog ;
 int server_version ;

__attribute__((used)) static void
dropRoles(PGconn *conn)
{
 PQExpBuffer buf = createPQExpBuffer();
 PGresult *res;
 int i_rolname;
 int i;

 if (server_version >= 90600)
  printfPQExpBuffer(buf,
        "SELECT rolname "
        "FROM %s "
        "WHERE rolname !~ '^pg_' "
        "ORDER BY 1", role_catalog);
 else if (server_version >= 80100)
  printfPQExpBuffer(buf,
        "SELECT rolname "
        "FROM %s "
        "ORDER BY 1", role_catalog);
 else
  printfPQExpBuffer(buf,
        "SELECT usename as rolname "
        "FROM pg_shadow "
        "UNION "
        "SELECT groname as rolname "
        "FROM pg_group "
        "ORDER BY 1");

 res = executeQuery(conn, buf->data);

 i_rolname = PQfnumber(res, "rolname");

 if (PQntuples(res) > 0)
  fprintf(OPF, "--\n-- Drop roles\n--\n\n");

 for (i = 0; i < PQntuples(res); i++)
 {
  const char *rolename;

  rolename = PQgetvalue(res, i, i_rolname);

  fprintf(OPF, "DROP ROLE %s%s;\n",
    if_exists ? "IF EXISTS " : "",
    fmtId(rolename));
 }

 PQclear(res);
 destroyPQExpBuffer(buf);

 fprintf(OPF, "\n\n");
}
